@@ -1,3 +1,6 @@
+2016-01-15  Benno Schulenberg  <bensberg@justemail.net>
+	* src/winio.c (set_modified): Plug another memory leak.
+
 2016-01-15  Mike Frysinger  <vapier@gentoo.org>
 	* src/files.c (open_file): Free the full filename in all cases.
 
